# whisper_clone

./: .gitignore  Cargo.toml  package-mac.sh
.github/workflows/: build-windows.yml
src/: audio.rs  feedback.rs  hotkey.rs  main.rs  model.rs  overlay.rs  transcriber.rs  typer.rs
