[package]
name = "voxtype"
version = "0.1.0"
edition = "2021"
description = "System-wide dictation powered by Whisper AI — free, offline, private"

[features]
# cargo build --release            → uses small.en
# cargo build --release --features medium → uses medium.en
medium = []

[dependencies]
whisper-rs = { version = "0.16", features = ["cuda"] }
cpal = "0.15"
enigo = "0.2"
anyhow = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
raw-window-handle = "0.6"
tray-icon = "0.20"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
